5.0.1~beta6 (2014-12-30)
ADD: Portuguese (Brazil) (thx 2 ASH_Macedo)
ADD: Hungarian (thx 2 gyeben)
ADD: Portuguese (thx 2 enen92)
ADD: Polish (thx 2 D.K.)
ADD: Russian (thx 2 BytEvil)
ADD: Spanish (thx 2 PatOso)
ADD: French (thx 2 roondar)
UPD: support for '1080XF' and 'Xperience1080'
FIX: some live streams should work
FIX: update meta data for video played via ext. url
FIX: remove video from 'Watch Later' playlist
REV: reverted to requests

5.0.0 (2014-12-27)
DEL: removed beta
ADD: new rating system - like/dislike/remove
ADD: show confirmation before remove a video or deleting a playlist
ADD: rename your playlists
ADD: setup default view modes (default and videos)
ADD: setup correct language and region for YouTube
ADD: support for old YouTube url calls (plugin://plugin.video.youtube/?action=play_video&videoid=[ID])
UPD: new icons
UPD: reorganized context menu
UPD: some minor tests
UPD: moved 'Watch Later' up in context menu
FIX: rename playlist
FIX: show newest videos first (uploads of channel)
FIX: show fanarts in 'Watch Later' and 'Liked Videos'

1.0.0~alpha29 (2014-12-14)
UPD: new login mechanism (removed the old one)
ADD: translation fr-FR (thanks to roondar)
ADD: manage playlists - create, remove and add videos to a selected playlists
FIX: support cyrillic letters

1.0.0~alpha28 (2014-12-07)
ADD: subscribe to channel (from videos and playlist)
UPD: rework of handling context menu
FIX: remove next page for related videos (because APIv3 is broken)

1.0.0~alpha27 (2014-12-01)
UPD: performance improved for auto-removing videos from 'Watch Later' list
FIX: error while navigating to the next page

1.0.0~alpha26 (2014-11-30)
ADD: hide all entries (except search) via settings in the root menu
ADD: missing pagination for 'My Subscriptions'
FIX: next page is working again (Watch Later)
UPD: disabled language (for now) Kodi isn't providing reliable language IDs

1.0.0~alpha25 (2014-11-29)
UPD: requests with language/region
UPD: new icons